// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "data": Object {
    "ant": Object {
      "person": Object {
        "name": "Ant Tim",
      },
    },
    "ben": Object {
      "person": Object {
        "name": "Ben Jim",
      },
    },
    "cat": Object {
      "person": Object {
        "name": "Cat Jim",
      },
    },
  },
}
`;

exports[`filters by boolean equal to 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "name": "Ben Jim",
      },
      "1": Object {
        "name": "Ant Tim",
      },
    },
  },
}
`;

exports[`filters by float equal to 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "height": 1.7,
        "name": "Ben Jim",
      },
    },
  },
}
`;

exports[`filters by float greater than 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "height": 1.76,
        "name": "Ant Tim",
      },
    },
  },
}
`;

exports[`filters by float greater than or equal to 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "height": 1.7,
        "name": "Ben Jim",
      },
      "1": Object {
        "height": 1.76,
        "name": "Ant Tim",
      },
    },
  },
}
`;

exports[`filters by float less than 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "height": 1.63,
        "name": "Cat Jim",
      },
    },
  },
}
`;

exports[`filters by float less than or equal to 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "height": 1.63,
        "name": "Cat Jim",
      },
      "1": Object {
        "height": 1.7,
        "name": "Ben Jim",
      },
    },
  },
}
`;

exports[`filters by int equal to 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "age": 37,
        "name": "Ben Jim",
      },
    },
  },
}
`;

exports[`filters by int greater than 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "age": 38,
        "name": "Cat Jim",
      },
      "1": Object {
        "age": 37,
        "name": "Ben Jim",
      },
    },
  },
}
`;

exports[`filters by int greater than or equal to 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "age": 38,
        "name": "Cat Jim",
      },
      "1": Object {
        "age": 37,
        "name": "Ben Jim",
      },
    },
  },
}
`;

exports[`filters by int less than 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "age": 37,
        "name": "Ben Jim",
      },
      "1": Object {
        "age": 36,
        "name": "Ant Tim",
      },
    },
  },
}
`;

exports[`filters by int less than or equal to 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "age": 37,
        "name": "Ben Jim",
      },
      "1": Object {
        "age": 36,
        "name": "Ant Tim",
      },
    },
  },
}
`;

exports[`filters by string equal to 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "name": "Ben Jim",
      },
    },
  },
}
`;

exports[`filters by string with all terms 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "name": "Ben Jim",
      },
    },
  },
}
`;

exports[`filters by string with any of terms 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "name": "Cat Jim",
      },
      "1": Object {
        "name": "Ben Jim",
      },
    },
  },
}
`;

exports[`order edges by float ascending 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "height": 1.63,
        "name": "Cat Jim",
      },
      "1": Object {
        "height": 1.7,
        "name": "Ben Jim",
      },
      "2": Object {
        "height": 1.76,
        "name": "Ant Tim",
      },
    },
  },
}
`;

exports[`order edges by float descending 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "height": 1.76,
        "name": "Ant Tim",
      },
      "1": Object {
        "height": 1.7,
        "name": "Ben Jim",
      },
      "2": Object {
        "height": 1.63,
        "name": "Cat Jim",
      },
    },
  },
}
`;

exports[`order edges by int ascending 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "age": 36,
        "name": "Ant Tim",
      },
      "1": Object {
        "age": 37,
        "name": "Ben Jim",
      },
      "2": Object {
        "age": 38,
        "name": "Cat Jim",
      },
    },
  },
}
`;

exports[`order edges by int descending 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "age": 38,
        "name": "Cat Jim",
      },
      "1": Object {
        "age": 37,
        "name": "Ben Jim",
      },
      "2": Object {
        "age": 36,
        "name": "Ant Tim",
      },
    },
  },
}
`;

exports[`order edges by string ascending 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "name": "Ant Tim",
      },
      "1": Object {
        "name": "Ben Jim",
      },
      "2": Object {
        "name": "Cat Jim",
      },
    },
  },
}
`;

exports[`order edges by string descending 1`] = `
Object {
  "data": Object {
    "people": Object {
      "0": Object {
        "name": "Cat Jim",
      },
      "1": Object {
        "name": "Ben Jim",
      },
      "2": Object {
        "name": "Ant Tim",
      },
    },
  },
}
`;

exports[`queries aliased field 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "David",
      },
    },
  },
}
`;

exports[`queries aliased field 2`] = `
Object {
  "data": Object {
    "person": Object {
      "alias": "David",
    },
  },
}
`;

exports[`queries nested field 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "David",
      },
    },
  },
}
`;

exports[`queries nested field 2`] = `
Object {
  "data": Object {
    "person": Object {
      "name": "David",
      "partner": Object {
        "name": "Amy",
      },
    },
  },
}
`;

exports[`queries node field 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "David",
      },
    },
  },
}
`;

exports[`queries node field 2`] = `
Object {
  "data": Object {
    "person": Object {
      "name": "David",
    },
  },
}
`;

exports[`queries node fields 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "David",
      },
    },
  },
}
`;

exports[`queries node fields 2`] = `
Object {
  "data": Object {
    "person": Object {
      "employed": true,
      "name": "David",
    },
  },
}
`;

exports[`queries type name 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "David",
      },
    },
  },
}
`;

exports[`queries type name 2`] = `
Object {
  "data": Object {
    "person": Object {
      "__typename": "Person",
      "name": "David",
    },
  },
}
`;

exports[`returns empty array for non-existing edges 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Olivia",
      },
    },
  },
}
`;

exports[`returns empty array for non-existing edges 2`] = `
Object {
  "data": Object {
    "person": Object {
      "children": Object {},
      "name": "Olivia",
    },
  },
}
`;

exports[`returns null for node 1`] = `
Object {
  "data": Object {
    "person": null,
  },
  "errors": Object {
    "0": Object {
      "locations": Object {
        "0": Object {
          "column": 5,
          "line": 2,
        },
      },
      "message": "There is no 'Node' with id '0x00'",
      "path": Object {
        "0": "person",
      },
    },
  },
}
`;

exports[`returns null for non-existing edge 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Olivia",
      },
    },
  },
}
`;

exports[`returns null for non-existing edge 2`] = `
Object {
  "data": Object {
    "person": Object {
      "name": "Olivia",
      "partner": null,
    },
  },
}
`;
